# internal/pkg/model/dto/account.go
@@ -1,1 +1,10 @@
 package dto
+
+type CreateAccountRequest struct {
+	Currency string `json:"currency"`
+}
+
+type CreateAccountResponse struct {
+	AccountNumber string `json:"account_number"`
+	Currency      string `json:"currency"`
+}
